--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <title>Xians.ai</title>
   </head>
   <body>
+    <!-- Runtime Configuration - Load FIRST before any React code -->
+    <script src="%PUBLIC_URL%/config.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
