--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Xians.ai</title>
+    <title>AI Agent Dev Platform</title>
   </head>
   <body>
     <!-- Runtime Configuration - Load FIRST before any React code -->
